# clinical-trial-platform

./: .gitignore  Makefile  README.md  pyproject.toml
src/data_generators/: ae_generator.py  dm_generator.py  generate_data.py
src/data_generators/schemas/: adverse_event.py  base.py  demography.py
